--- a/books_generator/frontend/src/index.css
+++ b/books_generator/frontend/src/index.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 
-.wrapper {
+.base-wrapper {
+  min-height: 100vh;
   background-color: #1f2937;
 }
 .custom-scroll::-webkit-scrollbar {
